# api_hasher

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  pyproject.toml
.github/workflows/: cmake-single-platform.yml
examples/: main.cpp
source/: api_hasher.ixx  hash_functions.ixx
src/: api_hash_ext.cpp  api_hasher.ixx  hash_functions.ixx
src/api_hash/: __init__.py
tests/: test_api_hash.cpp
