[project]
name = "api-hash"
version = "0.1.0"
desription = "toy project for openssl and python bindings"
requires-python = ">=3.8"
authors = [
    { name = "Kyle AuBuchon", email = "kdaub.tf2@gmail.com" },
]


[tool.poetry]
name = "api-hash"
version = "0.1.0"
description = "toy project for openssl and python bindings"
authors = ["Kyle AuBuchon <kdaub.tf2@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
nanobind = ">=1.7.0"
scikit-build-core = ">=0.5.1"
cmake = ">=3.17"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core", "scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.setuptools.packages.find]
where = ["src/*abi*/"]

[tool.setuptools.package-data]
mypkg = ["*.dll", "*.so"]
